revert to Java 8, still failing tests